fix: add matrix

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,12 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script
+			async
+			src="https://umami.07102020.xyz/script.js"
+			data-website-id="23c710f2-072b-4c7b-9304-f2fc6f346fe5"
+			data-domains="paste2download.vercel.app,paste2download.it"
+		></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
