chore: update umami domain

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 			async
 			src="https://umami.07102020.xyz/script.js"
 			data-website-id="23c710f2-072b-4c7b-9304-f2fc6f346fe5"
-			data-domains="paste2download.vercel.app,paste2download.it"
+			data-domains="paste2download.vercel.app,paste2download.it,paste2download.com"
 		></script>
 		<script>
 			window.chatwootSettings = { hideMessageBubble: 'true', type: 'expanded_bubble' };
