hotfix: update umami

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 			async
 			src="https://umami.07102020.xyz/script.js"
 			data-website-id="0e097494-bf0f-4aa8-b506-abe99f455cff"
-			data-domains="paste2download.com"
+			data-domains="paste2download.com,paste2download.vercel.app"
 		></script>
 		<script>
 			window.chatwootSettings = { hideMessageBubble: 'true', type: 'expanded_bubble' };
