chore: optimize SEO

--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 	<head>
+		<title>Paste2Download - Download videos effortlessly</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="description" content="Download videos from your favourite platforms with ease. Haste no hassle." />
+		<meta name="keywords" content="video download, video downloader, paste download" />
+		<meta name="author" content="Zulfiqar Laili" />
+		<meta name="theme-color" content="#666" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://paste2download.com" />
+		<meta property="og:title" content="Paste2Download - Download videos effortlessly" />
+		<meta property="og:description" content="Download videos from your favourite platforms with ease. Haste no hassle." />
+		<meta property="og:image" content="%sveltekit.assets%/img/og.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://paste2download.com" />
+		<meta property="twitter:title" content="Paste2Download - Download videos effortlessly" />
+		<meta property="twitter:description" content="Download videos from your favourite platforms with ease. Haste no hassle." />
+		<meta property="twitter:image" content="%sveltekit.assets%/img/og.png" />
+
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script
@@ -29,10 +50,10 @@
 				};
 			})(document, 'script');
 		</script>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
