--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,9 @@
 		<meta property="twitter:description" content="Download videos from your favourite platforms with ease. Haste no hassle." />
 		<meta property="twitter:image" content="%sveltekit.assets%/img/og.png" />
 
+		<!-- PWA -->
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json"/>
+
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script
